[gd_scene load_steps=7 format=3 uid="uid://dcv503q4m8ov8"]

[ext_resource type="Script" path="res://scenes/petri/bacteria.gd" id="1_vbhfj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ke4df"]
radius = 32.0

[sub_resource type="Gradient" id="Gradient_rrqio"]
colors = PackedColorArray(1, 1, 1, 0.337255, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ywq4p"]
gradient = SubResource("Gradient_rrqio")
width = 1000
height = 1000
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Gradient" id="Gradient_h8wex"]
offsets = PackedFloat32Array(0.826829, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gke2r"]
gradient = SubResource("Gradient_h8wex")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="Bacteria" type="Area2D"]
script = ExtResource("1_vbhfj")

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -56.0
offset_right = 64.0
offset_bottom = -33.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ke4df")

[node name="Zone" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_ywq4p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_gke2r")

[node name="Polygon2D" type="Polygon2D" parent="Sprite2D"]
color = Color(1, 0.27451, 1, 1)
polygon = PackedVector2Array(-8, -24, 8, -24, 0, 0)

[node name="Eye1" type="RayCast2D" parent="Sprite2D"]
rotation = -0.261799
target_position = Vector2(0, -500)
collide_with_areas = true
collide_with_bodies = false

[node name="Eye2" type="RayCast2D" parent="Sprite2D"]
rotation = -0.174533
target_position = Vector2(0, -500)
collide_with_areas = true
collide_with_bodies = false

[node name="Eye3" type="RayCast2D" parent="Sprite2D"]
rotation = -0.0872665
target_position = Vector2(0, -500)
collide_with_areas = true
collide_with_bodies = false

[node name="Eye4" type="RayCast2D" parent="Sprite2D"]
target_position = Vector2(0, -500)
collide_with_areas = true
collide_with_bodies = false

[node name="Eye5" type="RayCast2D" parent="Sprite2D"]
rotation = 0.0872665
target_position = Vector2(0, -500)
collide_with_areas = true
collide_with_bodies = false

[node name="Eye6" type="RayCast2D" parent="Sprite2D"]
rotation = 0.174533
target_position = Vector2(0, -500)
collide_with_areas = true
collide_with_bodies = false

[node name="Eye7" type="RayCast2D" parent="Sprite2D"]
rotation = 0.261799
target_position = Vector2(0, -500)
collide_with_areas = true
collide_with_bodies = false
